[package]
name = "crypto_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9", features = ["sha2", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
p256 = { version = "0.13", features = ["ecdh"] }
ed25519-dalek = { version = "2.0", features = ["std"] }
x25519-dalek = "2.0"
criterion = "0.7"
sysinfo = "0.37"
rand = "0.8"
sha2 = "0.10"
pqcrypto-mldsa = "0.1.2"
pqcrypto-mlkem = "0.1.1"
pqcrypto-falcon = "0.4.1"

[[bench]]
name = "crypto_bench"
harness = false
